Kubernetes/micro_kibana/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ho-ma-kibana
  namespace: hospital-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ho-ma-kibana
  template:
    metadata:
      labels:
        app: ho-ma-kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.14.3
          resources:
            limits:
              memory: "1Gi"
              cpu: "1500m"
            requests:
              memory: "1Gi"
              cpu: "250m"
          ports:
          - name: kibana-port
            containerPort: 5601
          volumeMounts:
            - name: kibana-config
              mountPath: /usr/share/kibana/config
      volumes:    
      - name: kibana-config
        configMap:
          name: kibana-config
