Kubernetes/micro_kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: hospital-management
spec:
  type: ClusterIP
  selector:
    app: ho-ma-kibana
  ports:
  - name: kibana-port
    port: 5601
    targetPort: 5601
    protocol: TCP
